css/howls.css
#howl-c {
  position: absolute;
  right: 10px;
  top: 0px;
  z-index: 0;
  text-align: left;
  height: 100%;
  overflow: hidden;
}
#howl-c .inner-c {
  margin-top: 70px;
}

#howl-c .howl {
  display: none;
  opacity: 0;
  margin-top: 30px;
  margin-bottom: 10px;
  cursor: pointer;
  overflow: hidden;
  z-index: 9999;
  -webkit-transition: all 500ms cubic-bezier(0, 0, 0, 0.82);
     -moz-transition: all 500ms cubic-bezier(0, 0, 0, 0.82);
      -ms-transition: all 500ms cubic-bezier(0, 0, 0, 0.82);
       -o-transition: all 500ms cubic-bezier(0, 0, 0, 0.82);
          transition: all 500ms cubic-bezier(0, 0, 0, 0.82);
}

#howl-c .howl .inner {
  background: rgba(0,0,0,.7);
  border-radius: 5px;
  width: 300px;
  display: inline-block;
}

#howl-c .howl p {
  padding: 10px 15px 12px 15px;
  margin: 0;
  color: white;
  font-size: 1em;
}

#howl-c .howl.show {
  display: block;
}

#howl-c .howl.open {
  opacity: 1;
  margin-top: 0;
}

#howl-c .howl.open.hide {
  opacity: 0;
  height: 0 !important;
}

